[tool.poetry]
name = "sqlalchemy-rusdoc"
version = "0.0.1"
description = ""
authors = ["Elisha Kravchuk <elisey.kravchuk@gmail.com>"]
license = "LGPL3"
readme = "README.md"
packages = [{include = "sqlalchemy_rusdoc"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.7"
mkdocs-glightbox = "^0.3.3"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.3.3"
openai = "^0.27.4"
logging = "^0.4.9.6"
html2markdown = "^0.1.7"
markdownify = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
