[tool.poetry]
name = "generate-tools"
version = "0.1.0"
description = ""
authors = ["Elisha Kravchuk <elisey.kravchuk@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.3.3"
openai = "^0.27.4"
logging = "^0.4.9.6"
html2markdown = "^0.1.7"
markdownify = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
